--- a/app/design/frontend/Magento/blank/web/css/source/_layout.less
+++ b/app/design/frontend/Magento/blank/web/css/source/_layout.less
@@ -93,6 +93,9 @@
     }
 
     .page-main {
+        flex-basis: auto;
+        flex-grow: 1;
+        flex-shrink: 0;
         width: 100%;
     }
 
@@ -125,14 +128,11 @@
     }
 
     .page-layout-2columns-left {
-        .main {
-            padding-left: @layout-column__additional-sidebar-offset
-        }
-
         .sidebar-additional {
             clear: left;
             float: left;
             padding-left: 0;
+            padding-right: @layout-column__additional-sidebar-offset;
         }
     }
 
